force-app/main/default/objects/Vizita__c/Vizita__c.object-meta.xml
<CustomObject>
    <label>Vizita</label>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>Vizita Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vizite</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>