force-app/main/default/objects/Vizita__c/fields/Data_Vizita__c.field-meta.xml
<CustomField>
    <fullName>Data_Vizita__c</fullName>
    <label>Data Vizita</label>
    <type>Date</type>
</CustomField>