force-app/main/default/objects/Vizita__c/fields/Obiective_vizita_urmatoare__c.field-meta.xml
<CustomField>
    <fullName>Obiective_vizita_urmatoare__c</fullName>
    <label>Obiective vizita urmatoare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>